apps/registry/docker/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry-ui
  template:
    metadata:
      labels:
        app: docker-registry-ui
    spec:
      containers:
        - name: registry-ui
          image: joxit/docker-registry-ui:main
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
