apps/registry/docker/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ui
spec:
  ingressClassName: nginx
  rules:
    - host: registry-ui.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry-ui
                port:
                  number: 80
